Refactor hash handling to use HashField object.
Replaced byte arrays with HashField objects across all hash handlers to improve code readability and ensure consistency. This change also includes updating related tests and protocols to accommodate the new HashField structure.